Fix docker link and files

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </p>
           <br>
 
-          <a href="docker"
+          <a href="docker/quick_docker.html"
           class="btn btn-lg btn-danger" role="button">
           Quick Reference Guides »
           </a>
